# led_sandbox

./: .gitignore  .gitmodules  README.md  requirements.txt
Software/.metadata/: version.ini
Software/test_matrix/: create-this-app
Software/test_matrix_bsp/: create-this-bsp  settings.bsp
Software/test_matrix_ip/: .cproject  .project  Makefile  create-this-app  test_matrix_ip.elf  test_matrix_ip.hex  test_matrix_ip.map  test_matrix_ip.objdump
Software/test_matrix_ip_bsp/: .cproject  .project  Makefile  alt_sys_init.c  create-this-bsp  linker.h  linker.x  memory.gdb  public.mk  settings.bsp  system.h
hardware/: led_sandbox.pof  led_sandbox.qdf  led_sandbox.qpf  led_sandbox.qsf  led_sandbox.sdc  led_sandbox.sof  led_sandbox.sopcinfo  led_sandbox_assignment_defaults.qdf  led_sandbox_sopc.qsys  led_sandbox_sopc.sopcinfo  led_sandbox_time_limited.sof  led_sandbox_top.v
hardware/db/: led_sandbox.db_info
hardware/led_sandbox_sopc/: led_sandbox_sopc.bsf  led_sandbox_sopc.html  led_sandbox_sopc_bb.v  led_sandbox_sopc_inst.v  led_sandbox_sopc_inst.vhd
hardware/pin_assignment/: led_sandbox.qsf
python_nn_model/: README.md
software/API_accelerometer/: .cproject  .project  Makefile  (+4 more)
software/led_sandbox/led_sandbox_posix/: led_sandbox  matrix_pixels.txt  meson.build
software/led_sandbox/led_sandbox_posix/Src/: led_sandbox_hal_impl_posix.c  led_sandbox_hal_impl_posix.cpp  main.c
software/led_sandbox/led_sandbox_posix/rgb_led_matrix_emulator/: rgb_led_matrix_emulator.py
sopc/: led_sandbox.pof  led_sandbox.sof  led_sandbox_sopc.sopcinfo  lite_pc.sopcinfo
(+292 files in other folders)
